# free_labour_common_will

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: blockchain-api.md  blockchain.md  catalogs.md  dev-ideas.md  economy.md  faq.md  pilot.md  records.md  sync.md
docs/catalogs/: needs.json  professions.json
docs/pilot/: draft-template.json  scribe-prompt.md
modules/aggregator/: CMakeLists.txt
modules/aggregator/include/aggregator/: aggregator.h  attestation_view.h  deal_view.h  discovery_view.h  economy_view.h  match_view.h  own_chain.h  profile_view.h  rates_view.h  server.h
modules/aggregator/src/: aggregator.cpp  attestation_view.cpp  deal_view.cpp  discovery_view.cpp  economy_view.cpp  main.cpp  match_view.cpp  own_chain.cpp  profile_view.cpp  rates_view.cpp  server.cpp
modules/aggregator/tests/: test_aggregator.cpp  test_attestation_view.cpp  test_deal_view.cpp  test_discovery_view.cpp  test_economy_view.cpp  test_match_view.cpp  test_profile_view.cpp  test_rates_view.cpp  test_relay.cpp  test_tls_smoke.cpp
modules/blockchain/: CMakeLists.txt
modules/blockchain/include/blockchain/: blockchain.h  crypto.h  errors.h  fraud.h  hll.h  merge_session.h  merge_snapshot.h  merkle.h  revocation.h  seal_manager.h  serializer.h  storage.h  types.h  validator.h
modules/blockchain/src/: blockchain.cpp  crypto.cpp  errors.cpp  fraud.cpp  hll.cpp  main.cpp  merge_session.cpp  merge_snapshot.cpp  merkle.cpp  revocation.cpp  seal_manager.cpp  serializer.cpp  storage.cpp  validator.cpp
modules/blockchain/tests/: test_blockchain.cpp  test_crypto.cpp  test_fraud.cpp  test_hll.cpp  test_merge_session.cpp  test_merge_snapshot.cpp  test_merkle.cpp  test_seal_manager.cpp  test_serializer.cpp  test_storage.cpp  test_types.cpp  test_validator.cpp
modules/cli/: CMakeLists.txt
modules/cli/src/: main.cpp
modules/records/: CMakeLists.txt
modules/records/include/records/: carry.h  catalog.h  codec.h  credit.h  draft.h  json.h  types.h
modules/records/src/: carry.cpp  catalog.cpp  codec.cpp  credit.cpp  draft.cpp  json.h
modules/records/tests/: test_carry.cpp  test_catalog.cpp  test_codec.cpp  test_credit.cpp  test_draft.cpp
modules/sync/: CMakeLists.txt
modules/sync/include/sync/: dialogue_channel.h  merge_dialogue.h  participant_cache.h  snapshot_exchange.h
modules/sync/src/: dialogue_channel.cpp  merge_dialogue.cpp  participant_cache.cpp  snapshot_exchange.cpp  wire_cbor.h
modules/sync/tests/: test_dialogue_channel.cpp  test_merge_dialogue.cpp  test_participant_cache.cpp  test_snapshot_exchange.cpp  user_ctx.h
sim/: README.md  collect_stats.sh  economy_month.sh
sim/sample_results/: ledger.csv  rates.csv  revoke.out  summary.txt
